# ace-controller

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  NVIDIA_PIPECAT.md  README.md  flake.nix  pyproject.toml
examples/: README.md
examples/speech-to-speech/: README.md  bot.py  elevenlabs_example.py  elevenlabs_readme.md  env.example  pyproject.toml
examples/static/: frames.proto  index.html
examples/utils/: riva_config.sh
src/nvidia_pipecat/: __init__.py
src/nvidia_pipecat/frames/: __init__.py  action.py  animation.py  custom_view.py  elevenlabs.py  nvidia_rag.py  riva.py  transcripts.py
src/nvidia_pipecat/pipeline/: __init__.py  ace_pipeline_runner.py
src/nvidia_pipecat/processors/: __init__.py  acknowledgment.py  audio_util.py  gesture_provider.py  google_translation_processor.py  guardrail.py  nvidia_context_aggregator.py  posture_provider.py  proactivity.py  transcript_synchronization.py  user_presence.py
src/nvidia_pipecat/serializers/: ace_websocket.py
src/nvidia_pipecat/services/: __init__.py  action_handler.py  animation_graph_service.py  audio2face_3d_service.py  base_action_service.py  elevenlabs.py  google_translation_service.py  nvidia_llm.py  nvidia_rag.py  riva_nmt.py  riva_speech.py
src/nvidia_pipecat/transports/: __init__.py
src/nvidia_pipecat/transports/network/: __init__.py  ace_fastapi_websocket.py
src/nvidia_pipecat/transports/services/: __init__.py
src/nvidia_pipecat/transports/services/ace_controller/: __init__.py
src/nvidia_pipecat/transports/services/ace_controller/routers/: register_apis_router.py  websocket_router.py
src/nvidia_pipecat/utils/: __init__.py  http_client.py  logging.py  message_broker.py  tracing.py
tests/: __init__.py
tests/unit/: __init__.py  test_ace_websocket_serializer.py  test_acknowledgment.py  test_animation_graph_services.py  test_audio2face_3d_service.py  test_audio_util.py  test_basic_pipelines.py  test_custom_view.py  test_elevenlabs.py  test_frame_creation.py  test_gesture.py  test_guardrail.py  test_message_broker.py  test_nvidia_aggregators.py  test_nvidia_llm_service.py  test_nvidia_rag_service.py  test_nvidia_tts_response_cacher.py  test_posture.py  test_proactivity.py  test_riva_asr_service.py  test_riva_nmt_service.py  test_riva_tts_service.py  test_traced_processor.py  test_transcription_sync_processors.py  test_user_presence.py  utils.py
tests/unit/configs/: animation_config.yaml
